--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700;800&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  input {
+    @apply border border-gray-700 rounded-full p-3 bg-dark-secondary text-dark-text focus:outline-none focus:border-lime-500;
+  }
+
+  .bg-black {
+    @apply bg-dark-primary;
+  }
+
+  .bg-black:hover {
+    @apply bg-dark-secondary;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background-color: theme('colors.dark.primary');
+  color: theme('colors.dark.text');
+}
+
+a {
+  text-decoration: none;
+  color: theme('colors.dark.accent');
+  transition: color 0.2s;
+}
+
+a:hover {
+  color: #050505;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #192734;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0b4e29;
+  border-radius: 4px;
 }
